--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <i class="fa-regular fa-camera"></i> Instagram
+    <div class="the-title"><i class="fa-regular fa-camera"></i><h3>Instagram</h3></div>
 
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
