--- a/index.html
+++ b/index.html
@@ -1,101 +1,129 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  </head>
-
-  <body>
-    <div class="the-title"><i class="fa-regular fa-camera"></i><h3>Instagram</h3></div>
-
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid justify-content-between">
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-center" id="navbarText">
-          <div class="d-flex gap-3">
-            <button id="scrollView" class="btn btn-primary">
-              <i class="fa-solid fa-arrow-down-long"></i> Scroll View
-            </button>
-            <button id="galleryView" class="btn btn-secondary">
-              <i class="fa-solid fa-border-all"></i> Gallery View
-            </button>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <!--Navbar principal-->
+    <nav class="navbar bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand d-flex" href="#">
+          <img src="https://i.pinimg.com/736x/f5/85/6f/f5856f110de3dd93be08a313e6c4e537.jpg" alt="Bootstrap" width="30" height="24" />
+          <p class="mb-0">Instagram</p>
+        </a>
+        <!--Button trigger modal-->
+         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Crear nuevo post</button>
+         <!--Modal-->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
           </div>
         </div>
-
-        <span class="navbar-text d-flex align-items-center gap-2">
-          <button style="background-color: green;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPostModal">
-            Create a new post
-          </button>
-          <button class="btn btn-light">
-            <i class="fa-solid fa-gear"></i>
-          </button>
-        </span>
       </div>
     </nav>
-
-    <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="newPostLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="newPostLabel">Create a New Post</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="postTitle" class="form-label">Title</label>
-                <input type="text" class="form-control" id="postTitle" placeholder="Enter a title">
+    <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="mb-3">
-                <label for="postContent" class="form-label">Content</label>
-                <textarea class="form-control" id="postContent" rows="3"></textarea>
+              <div class="modal-body">...</div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
               </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Post</button>
+            </div>
           </div>
         </div>
       </div>
+    </nav>
+    <!-- MENU DE NAVEGACIÓN -->
+    <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link active"
+          id="home-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#home-tab-pane"
+          type="button"
+          role="tab"
+          aria-controls="home-tab-pane"
+          aria-selected="true">
+          <!--Aquí las fotos solas-->
+          Home
+          </button>
+          <!--Las fotos-->
+          <div class="photos">
+            <img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" alt="">
+          </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" alt="">
+        </div>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link"
+          id="profile-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#profile-tab-pane"
+          type="button"
+          role="tab"
+          aria-controls="profile-tab-pane"
+          aria-selected="false">
+          Profile
+        </button>
+        <!--En Profile van las fotos de 3x3-->
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" alt="">
+          </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" alt="">
+        </div>
+        <div class="photos">
+            <img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" alt="">
+        </div>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">CARTAS SOLAS AQUI</div>
+      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">CARTAS DE 3X3 AQUI</div>
     </div>
-
-    <!-- Contenedor de fotos -->
-    <div id="postsContainer" class="gallery-view container">
-  <div class="row">
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" alt=""></div>
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" alt=""></div>
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" alt=""></div>
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" alt=""></div>
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" alt=""></div>
-    <div class="col-4"><img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" alt=""></div>
-  </div>
-</div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Script de cambio de vista -->
-    <script>
-      const postsContainer = document.getElementById("postsContainer");
-      const scrollBtn = document.getElementById("scrollView");
-      const galleryBtn = document.getElementById("galleryView");
-
-      scrollBtn.addEventListener("click", () => {
-        postsContainer.classList.remove("gallery-view");
-        postsContainer.classList.add("scroll-view");
-      });
-
-      galleryBtn.addEventListener("click", () => {
-        postsContainer.classList.remove("scroll-view");
-        postsContainer.classList.add("gallery-view");
-      });
-    </script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</body>
 </html>
