--- a/index.html
+++ b/index.html
@@ -1,129 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    <!--Navbar principal-->
-    <nav class="navbar bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand d-flex" href="#">
-          <img src="https://i.pinimg.com/736x/f5/85/6f/f5856f110de3dd93be08a313e6c4e537.jpg" alt="Bootstrap" width="30" height="24" />
-          <p class="mb-0">Instagram</p>
-        </a>
-        <!--Button trigger modal-->
-         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Crear nuevo post</button>
-         <!--Modal-->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">...</div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">📸 Instagram</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="ms-auto">
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Create a new post
+                    </button>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            ⚙️
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">Opción 1</a></li>
+                            <li><a class="dropdown-item" href="#">Opción 2</a></li>
+                            <li><a class="dropdown-item" href="#">Opción 3</a></li>
+                            <li><a class="border-top dropdown-item text-danger" href="#">Log out</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </nav>
+
     <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
             <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">...</div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <textarea placeholder="add caption here"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </nav>
-    <!-- MENU DE NAVEGACIÓN -->
-    <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link active"
-          id="home-tab"
-          data-bs-toggle="tab"
-          data-bs-target="#home-tab-pane"
-          type="button"
-          role="tab"
-          aria-controls="home-tab-pane"
-          aria-selected="true">
-          <!--Aquí las fotos solas-->
-          Home
-          </button>
-          <!--Las fotos-->
-          <div class="photos">
-            <img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" alt="">
-          </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" alt="">
-        </div>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button
-          class="nav-link"
-          id="profile-tab"
-          data-bs-toggle="tab"
-          data-bs-target="#profile-tab-pane"
-          type="button"
-          role="tab"
-          aria-controls="profile-tab-pane"
-          aria-selected="false">
-          Profile
-        </button>
-        <!--En Profile van las fotos de 3x3-->
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" alt="">
-          </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" alt="">
-        </div>
-        <div class="photos">
-            <img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" alt="">
-        </div>
-      </li>
-    </ul>
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">CARTAS SOLAS AQUI</div>
-      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">CARTAS DE 3X3 AQUI</div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+    <!-- Botones de selección -->
+    <ul class="nav d-flex justify-content-center align-items-center" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
+                type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+        </li>
+
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
+                type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+        </li>
+    </ul>
+
+
+    <!-- Nav&Tabs -->
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+            tabindex="0">
+            <!-- Grid 3x3 -->
+            <div class="container">
+                <div class="row">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/27/367/267.jpg?hmac=9cqOiwja76pSf6w1QA_VmGOjwfV0E3oc4YI6m5EOFvw">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/18/367/267.jpg?hmac=YK1igNRroANbOqxi7Po5_ctbSDKg86tqHOw4D96XfbM">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/2/367/267.jpg?hmac=fg7-2RVTv7Arg3KCcWEorOjdPaC-vJPKTLZgQ7f6R0g">
+                </div>
+                <div class="row my-3">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0">
+                </div>
+                <div class="row">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU">
+                    <img class="col-4" src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc">
+                </div>
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+            <!-- Grid Cards -->
+            <div class="container">
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Titulo del post</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://cataas.com/cat/black" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Titulo del post</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://cataas.com/cat/white" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Titulo del post</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://cataas.com/cat/orange" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
