--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <div class="container">
                 <div class="card col-md-6 col-12 mx-auto my-4">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <h3>Titulo del post</h3>
+                        <h3>Motivation</h3>
                         <p class="text-secondary">12/12</p>
                     </div>
-                    <img src="https://cataas.com/cat/black" class="card-img-top" alt="...">
+                    <img src="https://fastly.picsum.photos/id/27/367/267.jpg?hmac=9cqOiwja76pSf6w1QA_VmGOjwfV0E3oc4YI6m5EOFvw" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">1000 Likes</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
@@ -114,10 +114,10 @@
 
                 <div class="card col-md-6 col-12 mx-auto my-4">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <h3>Titulo del post</h3>
+                        <h3>Nature</h3>
                         <p class="text-secondary">12/12</p>
                     </div>
-                    <img src="https://cataas.com/cat/white" class="card-img-top" alt="...">
+                    <img src="https://fastly.picsum.photos/id/18/367/267.jpg?hmac=YK1igNRroANbOqxi7Po5_ctbSDKg86tqHOw4D96XfbM" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">1000 Likes</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
@@ -126,10 +126,76 @@
 
                 <div class="card col-md-6 col-12 mx-auto my-4">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <h3>Titulo del post</h3>
+                        <h3>Lorem, ipsum.</h3>
                         <p class="text-secondary">12/12</p>
                     </div>
-                    <img src="https://cataas.com/cat/orange" class="card-img-top" alt="...">
+                    <img src="https://fastly.picsum.photos/id/2/367/267.jpg?hmac=fg7-2RVTv7Arg3KCcWEorOjdPaC-vJPKTLZgQ7f6R0g" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Lorem, ipsum.</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/59/367/267.jpg?hmac=gHirbLSnUnNxndC6tj-h1uSYy14U8N4bKI2AhoUMFKM" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Lost thoughts</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/58/367/267.jpg?hmac=AtywV68WOCM8dNCgusz0vEri8oo7iZjgDUhScZjHy4M" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Urban art</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/57/367/267.jpg?hmac=ReRy2gXqo7vQAXNw79nisa9GTuAxqLVW3z9CJgYQZ_0" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Flying high</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/53/367/267.jpg?hmac=EzmHtzl326Pgby0hLgkO0TlM-lcdQhCTGtnB35_Go10" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Sweet desolation</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/46/367/267.jpg?hmac=UhnLHghsVhwDW5PCBnCTJgONhP-v0hbhQNnGv98RuaU" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">1000 Likes</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
+                    </div>
+                </div>
+                <div class="card col-md-6 col-12 mx-auto my-4">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Chills</h3>
+                        <p class="text-secondary">12/12</p>
+                    </div>
+                    <img src="https://fastly.picsum.photos/id/41/367/267.jpg?hmac=QOFSo2cNarg1-_szBRvnDGBkePdEcysK7OGPFAVtWvc" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">1000 Likes</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ipsam, tempore mollitia dicta perferendis exercitationem, nulla doloremque ullam maiores eveniet autem sapiente, adipisci sint. Veniam voluptatum esse consequuntur repellendus ipsam.</p>
